--- a/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/cambiar-contrasena-empresa/cambiar-contrasena-empresa.component.html
+++ b/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/cambiar-contrasena-empresa/cambiar-contrasena-empresa.component.html
@@ -1,1 +1,93 @@
-<p>cambiar-contrasena-empresa works!</p>
+<body class="align">
+    <div class="login">
+      <header class="login__header">
+        <div class="logo-produce">
+            <img src="https://www.jymcontadores.pe/wp-content/uploads/2020/06/PRODUCE-2-770x160.jpg" alt="Logo" title="Logo" width="138">
+          </div>  
+        <div class="logo-aplicacion">
+          <img src="https://vusp.produce.gob.pe/Content/img/logo.png" alt="Logo" title="Logo" width="138">
+        </div>
+          <h3>Cambiar contraseña</h3>
+          <p>Persona Jurídica</p>
+    </header>
+
+      <form class="login__form" >      
+        <div>
+            <div class="input-wrapper">
+              <label for="contrasena_actual">CONTRASEÑA ACTUAL</label>
+              <input type="password"  id="contrasena_actual" name="contrasena_actual" placeholder="" maxlength="150" >      
+              <svg  id="eyeContrasena"  xmlns="http://www.w3.org/2000/svg" class="input-icon password" viewBox="0 0 20 20" fill="currentColor">
+              <path d="M10 12a2 2 0 100-4 2 2 0 000 4z" />
+              <path fill-rule="evenodd" d="M.458 10C1.732 5.943 5.522 3 10 3s8.268 2.943 9.542 7c-1.274 4.057-5.064 7-9.542 7S1.732 14.057.458 10zM14 10a4 4 0 11-8 0 4 4 0 018 0z" clip-rule="evenodd" />
+            </svg>
+            </div>
+            <p class="validador">Debe ingresar la contraseña.</p>
+            <p class="validador">La contraseña debe cumplir con los requistos</p>
+        </div>
+    
+        <div class="center">
+          <a href="#">Recuperar contraseña</a>
+        </div>
+        
+        <div>
+          <button class="buttonSiguiente" >Siguiente</button>    
+        </div>
+
+        <div>
+            <div class="input-wrapper">
+              <label for="contrasena_actual">CONTRASEÑA NUEVA</label>
+              <input type="password"  id="contrasena_actual" name="contrasena_actual" placeholder="" maxlength="150" >      
+              <svg  id="eyeContrasena"  xmlns="http://www.w3.org/2000/svg" class="input-icon password" viewBox="0 0 20 20" fill="currentColor">
+              <path d="M10 12a2 2 0 100-4 2 2 0 000 4z" />
+              <path fill-rule="evenodd" d="M.458 10C1.732 5.943 5.522 3 10 3s8.268 2.943 9.542 7c-1.274 4.057-5.064 7-9.542 7S1.732 14.057.458 10zM14 10a4 4 0 11-8 0 4 4 0 018 0z" clip-rule="evenodd" />
+            </svg>
+            </div>
+            <p class="validador">Debe ingresar la contraseña.</p>
+            <p class="validador">La contraseña debe cumplir con los requistos</p>
+        </div>
+
+        <div>
+            <div class="input-wrapper">
+              <label for="contrasena_actual">REPETIR CONTRASEÑA NUEVA</label>
+              <input type="password"  id="contrasena_actual" name="contrasena_actual" placeholder="" maxlength="150" >      
+              <svg  id="eyeContrasena"  xmlns="http://www.w3.org/2000/svg" class="input-icon password" viewBox="0 0 20 20" fill="currentColor">
+              <path d="M10 12a2 2 0 100-4 2 2 0 000 4z" />
+              <path fill-rule="evenodd" d="M.458 10C1.732 5.943 5.522 3 10 3s8.268 2.943 9.542 7c-1.274 4.057-5.064 7-9.542 7S1.732 14.057.458 10zM14 10a4 4 0 11-8 0 4 4 0 018 0z" clip-rule="evenodd" />
+            </svg>
+            </div>
+            <p class="validador">Debe ingresar la contraseña.</p>
+            <p class="validador">La contraseña debe cumplir con los requistos</p>
+        </div>
+
+        <div>
+            <div class="left">
+              <label class="radio">Al menos un simbolo
+               <input type="radio"  name="radioSimbolo" disabled>
+               <span class="checkradio"></span>
+              </label>
+           </div>         
+           <div class="left">
+            <label class="radio">Al menos una mayúscula
+             <input type="radio"  name="radioMayus" disabled>
+             <span class="checkradio"></span>
+            </label>
+         </div>
+           <div class="left">
+            <label class="radio">Al menos un número
+             <input type="radio"  name="radioNumero" disabled >
+             <span class="checkradio"></span>
+            </label>
+         </div>
+         <div class="left">
+            <label class="radio">Más de 8 digitos
+             <input type="radio"  name="radioDigitos" disabled>
+             <span class="checkradio"></span>
+            </label>
+         </div>
+         </div>
+    
+      </form>
+    </div>
+  </body>
+  
+
