--- a/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/registro-empresa/registro-empresa.component.html
+++ b/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/registro-empresa/registro-empresa.component.html
@@ -164,7 +164,7 @@
     
          <div class="columnRadio">
           <div class="left">
-            <label class="radio">Al menos una mayuscula
+            <label class="radio">Al menos una mayúscula
              <input type="radio"  name="radioMayus" [checked]="ValidadorMayuscula" disabled>
              <span class="checkradio"></span>
             </label>
