--- a/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/cambiar-contrasena-empresa/cambiar-contrasena-empresa.component.html
+++ b/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/cambiar-contrasena-empresa/cambiar-contrasena-empresa.component.html
@@ -85,7 +85,19 @@
             </label>
          </div>
          </div>
+
+         <div>
+            <button class="buttonSiguiente" >Cambiar contraseña</button>    
+          </div>
     
+          <div class="center">
+          <h3>Contraseña cambiada</h3>
+          <label class="center">Tu contraseña fue guardada con exito</label>
+          </div>
+
+          <div>
+            <button class="buttonSiguiente" >Ir a inicio</button>    
+          </div>
       </form>
     </div>
   </body>
