--- a/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/cambiar-contrasena-empresa/cambiar-contrasena-empresa.component.css
+++ b/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/cambiar-contrasena-empresa/cambiar-contrasena-empresa.component.css
@@ -410,7 +410,7 @@
     left: 0;
     height: 10px;
     width: 10px;
-    background-color: #eee;
+    background-color: #FFBEBA;
     border-radius: 50%;
     margin-top: 3px;
   }
@@ -422,7 +422,7 @@
   
   /* Cuando el botón de radio está marcado, agrega un fondo azul */
   .radio input:checked ~ .checkradio {
-    background-color: #000;
+    background-color: #34b434ee;
   }
   
   /* Crea el indicador (el punto/círculo - oculto cuando no está marcado) */
@@ -437,6 +437,17 @@
     display: block;
   }
   
+  .login .radio {
+    font-size: 10px;
+  }
+  
+  .columnRadio {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    margin-bottom: 20px;
+  }
+
   .footer {
     text-align: center;
     margin-bottom: 0px;
@@ -449,5 +460,4 @@
     text-align: left;
     margin-bottom: 6px;
   }
-  
   
