--- a/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/cambiar-contrasena-empresa/cambiar-contrasena-empresa.component.html
+++ b/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/cambiar-contrasena-empresa/cambiar-contrasena-empresa.component.html
@@ -14,15 +14,14 @@
       <form class="login__form" >      
         <div>
             <div class="input-wrapper">
-              <label for="contrasena_actual">CONTRASEÑA ACTUAL</label>
-              <input type="password"  id="contrasena_actual" name="contrasena_actual" placeholder="" maxlength="150" >      
-              <svg  id="eyeContrasena"  xmlns="http://www.w3.org/2000/svg" class="input-icon password" viewBox="0 0 20 20" fill="currentColor">
+              <label for="contrasenaActual">CONTRASEÑA ACTUAL</label>
+              <input type="password"  id="contrasenaActual" name="contrasenaActual" placeholder="" [(ngModel)]="contrasenaActual" (change)="changeContrasenaActual($event)" maxlength="150" >      
+              <svg  (click)="mostrarContrasenaActual()" id="eyeContrasenaActual"  xmlns="http://www.w3.org/2000/svg" class="input-icon password" viewBox="0 0 20 20" fill="currentColor">
               <path d="M10 12a2 2 0 100-4 2 2 0 000 4z" />
               <path fill-rule="evenodd" d="M.458 10C1.732 5.943 5.522 3 10 3s8.268 2.943 9.542 7c-1.274 4.057-5.064 7-9.542 7S1.732 14.057.458 10zM14 10a4 4 0 11-8 0 4 4 0 018 0z" clip-rule="evenodd" />
             </svg>
             </div>
-            <p class="validador">Debe ingresar la contraseña.</p>
-            <p class="validador">La contraseña debe cumplir con los requistos</p>
+            <p class="validador" *ngIf="validadorContrasenaActual">Debe ingresar la contraseña.</p>
         </div>
     
         <div class="center">
@@ -35,52 +34,52 @@
 
         <div>
             <div class="input-wrapper">
-              <label for="contrasena_actual">CONTRASEÑA NUEVA</label>
-              <input type="password"  id="contrasena_actual" name="contrasena_actual" placeholder="" maxlength="150" >      
-              <svg  id="eyeContrasena"  xmlns="http://www.w3.org/2000/svg" class="input-icon password" viewBox="0 0 20 20" fill="currentColor">
+              <label for="contrasenaNueva">CONTRASEÑA NUEVA</label>
+              <input type="password"  id="contrasenaNueva" name="contrasenaNueva" placeholder="" [(ngModel)]="contrasenaNueva" (change)="changeContrasenaNueva($event)" maxlength="150" >      
+              <svg (click)="mostrarContrasenaNueva()" id="eyeContrasena"  xmlns="http://www.w3.org/2000/svg" class="input-icon password" viewBox="0 0 20 20" fill="currentColor">
               <path d="M10 12a2 2 0 100-4 2 2 0 000 4z" />
               <path fill-rule="evenodd" d="M.458 10C1.732 5.943 5.522 3 10 3s8.268 2.943 9.542 7c-1.274 4.057-5.064 7-9.542 7S1.732 14.057.458 10zM14 10a4 4 0 11-8 0 4 4 0 018 0z" clip-rule="evenodd" />
-            </svg>
+              </svg>
             </div>
-            <p class="validador">Debe ingresar la contraseña.</p>
-            <p class="validador">La contraseña debe cumplir con los requistos</p>
+              <p class="validador" *ngIf="validadorContrasenaNueva">Debe ingresar la contraseña.</p>
+              <p class="validador" *ngIf="validadorRequisitosContrasenaNueva">La contraseña debe cumplir con los requistos</p>
         </div>
-
-        <div>
+    
+         <div>
             <div class="input-wrapper">
-              <label for="contrasena_actual">REPETIR CONTRASEÑA NUEVA</label>
-              <input type="password"  id="contrasena_actual" name="contrasena_actual" placeholder="" maxlength="150" >      
-              <svg  id="eyeContrasena"  xmlns="http://www.w3.org/2000/svg" class="input-icon password" viewBox="0 0 20 20" fill="currentColor">
-              <path d="M10 12a2 2 0 100-4 2 2 0 000 4z" />
-              <path fill-rule="evenodd" d="M.458 10C1.732 5.943 5.522 3 10 3s8.268 2.943 9.542 7c-1.274 4.057-5.064 7-9.542 7S1.732 14.057.458 10zM14 10a4 4 0 11-8 0 4 4 0 018 0z" clip-rule="evenodd" />
-            </svg>
+              <label for="contrasenaRep">REPETIR CONTRASEÑA NUEVA</label>
+              <input type="password"  id="contrasenaRep" name="contrasenaRep" placeholder="" [(ngModel)]="contrasenaRep" (change)="changeContrasenaRep($event)" maxlength="150" >      
+              <svg (click)="mostrarContrasenaRep()" id="eyeContrasenaRep" xmlns="http://www.w3.org/2000/svg" class="input-icon password" viewBox="0 0 20 20" fill="currentColor">
+                <path d="M10 12a2 2 0 100-4 2 2 0 000 4z" />
+                <path fill-rule="evenodd" d="M.458 10C1.732 5.943 5.522 3 10 3s8.268 2.943 9.542 7c-1.274 4.057-5.064 7-9.542 7S1.732 14.057.458 10zM14 10a4 4 0 11-8 0 4 4 0 018 0z" clip-rule="evenodd" />
+              </svg>
             </div>
-            <p class="validador">Debe ingresar la contraseña.</p>
-            <p class="validador">La contraseña debe cumplir con los requistos</p>
-        </div>
+              <p class="validador" *ngIf="validadorContrasenaRep || validadorContrasenaRepetir">No coincide con la contraseña ingresada.</p>
+        </div> 
+    
 
         <div>
             <div class="left">
               <label class="radio">Al menos un simbolo
-               <input type="radio"  name="radioSimbolo" disabled>
+               <input type="radio"  name="radioSimbolo" [checked]="ValidadorSimbolo" disabled>
                <span class="checkradio"></span>
               </label>
            </div>         
            <div class="left">
             <label class="radio">Al menos una mayúscula
-             <input type="radio"  name="radioMayus" disabled>
+             <input type="radio"  name="radioMayus" [checked]="ValidadorMayuscula" disabled>
              <span class="checkradio"></span>
             </label>
          </div>
            <div class="left">
             <label class="radio">Al menos un número
-             <input type="radio"  name="radioNumero" disabled >
+             <input type="radio"  name="radioNumero" [checked]="ValidadorNumeros" disabled >
              <span class="checkradio"></span>
             </label>
          </div>
          <div class="left">
             <label class="radio">Más de 8 digitos
-             <input type="radio"  name="radioDigitos" disabled>
+             <input type="radio"  name="radioDigitos" [checked]="Validador8Digitos" disabled>
              <span class="checkradio"></span>
             </label>
          </div>
