--- a/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/recuperar-contrasena-empresa/recuperar-contrasena-empresa.component.html
+++ b/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/recuperar-contrasena-empresa/recuperar-contrasena-empresa.component.html
@@ -14,7 +14,8 @@
       <form class="login__form">      
           <div>
             <label for="ruc">RUC</label>
-            <input type="text" id="ruc" name="ruc" [(ngModel)]="numeroDocumento" placeholder="Ej.:10152346872">
+            <input type="text" id="ruc" name="ruc" [(ngModel)]="numeroDocumento" placeholder="Ej.:10152346872"  maxlength="11" (change)="changeRuc()">
+            <p class="validador" *ngIf="validarRuc">Debe ingresar el número de RUC.</p>
          </div>
           <!-- <div>
               <label for="numeroDoc">NÚMERO DE DOCUMENTO</label>
