--- a/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/registro-persona/registro-persona.component.html
+++ b/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/registro-persona/registro-persona.component.html
@@ -18,7 +18,7 @@
       <div class="login__form">  
       <div *ngIf="isVisiblePaso1">
         <label class="check" id="c1">TENGO RUC
-          <input type="checkbox" [(ngModel)]="tengoRuc" (change)="changeTengoRuc($event)">
+          <input type="checkbox" [(ngModel)]="tengoRuc">
           <span class="checkmark"></span>
         </label>
     
