--- a/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/registro-persona/registro-persona.component.html
+++ b/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/registro-persona/registro-persona.component.html
@@ -25,7 +25,8 @@
         <div *ngIf="tengoRuc">
             <label class="control-label" >RUC</label>
             <input type="text" id="ruc" name="ruc" placeholder="Ej.:10152346872"  [(ngModel)]="ruc" (change)="changeRuc($event)" maxlength="11" (keypress)="restrictNumeric($event)">
-            <p class="validador" *ngIf="validadorRuc">Debe ingresar el RUC</p>
+            <p class="validador" *ngIf="validadorRuc">Debe ingresar el RUC.</p>
+          <p class="validador" *ngIf="validadorRucDigitos">El RUC debe tener 11 digitos.</p>
          </div>
     
          <div class="column">
