--- a/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/recuperar-contrasena-persona/recuperar-contrasena-persona.component.html
+++ b/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/recuperar-contrasena-persona/recuperar-contrasena-persona.component.html
@@ -7,8 +7,10 @@
         <div class="logo-aplicacion">
           <img src="https://vusp.produce.gob.pe/Content/img/logo.png" alt="Logo" title="Logo" width="138">
         </div>
+        <div *ngIf="!validaSuccess">
           <h3>Recuperar contraseña</h3>
           <p>Persona Natural</p>
+        </div>         
     </header>
 
       <form action="#" class="login__form" method="POST"> 
