--- a/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/cambiar-contrasena-persona/cambiar-contrasena-persona.component.html
+++ b/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/cambiar-contrasena-persona/cambiar-contrasena-persona.component.html
@@ -91,7 +91,7 @@
          </div>
 
          <div>
-            <button class="buttonSiguiente" (click)="clickPaso3()" >Cambiar contraseña</button>    
+            <button class="buttonSiguiente" (click)="cambiarContrasena()" >Cambiar contraseña</button>    
           </div>
     </div>
     
