--- a/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/edicion-perfil-persona/edicion-perfil-persona.component.html
+++ b/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/edicion-perfil-persona/edicion-perfil-persona.component.html
@@ -1,1 +1,27 @@
-<p>edicion-perfil-persona works!</p>
+<body class="align">
+ <div class="form"> 
+     <div class="header">
+      <div class="circle"> 
+        <div class="circleEditar"> 
+            <img src="../../assets/img/icono_editar.png" alt="Editar" title="Editar" width="20">
+        </div> 
+      </div>        
+      <div class="title">
+        <h3>Mi perfil</h3>
+        <p>Persona Natural</p>    
+    </div>
+  </div>
+       <div class="personal">
+         <h5>Información personal</h5>
+            <p>DNI</p>
+            <p>Nombres y apellidos</p>
+            <p>Dirección</p>
+          </div>
+
+        <div class="contacto">
+        <h5>Información de contacto</h5>
+            <p>Celular</p>
+            <p>Correo</p>
+        </div>
+    </div>
+</body>
